syntax = "proto3";

package proto;

service MyService {
  rpc ListUser(RequestType) returns (stream User) {};
  rpc AddUser(User) returns (ResponseType) {};
}

message ResponseType {
  string message = 1;
}

message RequestType {
}

message User {
  string name = 1;
  int32 age = 2;
}